--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=spring-tech-events
+spring.datasource.url=jdbc:postgresql://localhost:5432/springtechevents
+spring.datasource.username=spring
+spring.datasource.password=spring
+spring.flyway.locations=classpath:db/migrations
