feat: implement EventService for event creation and image upload to S3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/springtechevents
 spring.datasource.username=spring
 spring.datasource.password=spring
 spring.flyway.locations=classpath:db/migrations
+aws.region=us-east-1
+aws.s3.bucket=tech-events-s3bucket
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
