--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 			<groupId>com.amazonaws</groupId>
 			<version>1.12.780</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 
 	</dependencies>
 
